fix: mappers tests